# Simple3D

./: CMakeLists.txt  README.md  simple3d_demo  standard.txt
models/: ico_sphere.mtl
src/: Camera.c  Camera.h  Matrix.c  Matrix.h  Model.c  Model.h  Vector.c  Vector.h  main.c
